--- a/index.html
+++ b/index.html
@@ -3,9 +3,49 @@
   <head>
     <meta charset="utf-8">
     <title>HSE ADS CHALLENGE</title>
+      <link rel="stylesheet" href="style.css">
   </head>
   <body>
-<p>пройти пост охраны
-</p>
+
+<header>
+  <h1>ДНЕВНИК ПРОХОЖДЕНИЯ HSE ADS CHALLENGE</h1>
+  </header>
+
+    <nav>
+      <ul>
+        <li>проекты</li>
+        <li>календарь</li>
+        <li>галерея</li>
+        <li>плейлист</li>
+      </ul>
+  </nav>
+<section>
+  <ul>
+    <li>неделя #1</li>
+    <li>неделя #2</li>
+    <li>неделя #3</li>
+    <li>неделя #4</li>
+    <li>неделя #5</li>
+    <li>неделя #6</li>
+    <li>неделя #7</li>
+    <li>неделя #8</li>
+  </ul>
+</section>
+
+  <h2 class="week1">
+  <div class="week1"></div>
+  НЕДЕЛЯ ПЕРВАЯ
+</h2>
+
+<div class="week1">
+<ul>
+  <li>пройти пост охраны</li>
+  <li>найти ключ от 559 (невозможно выполнить задание)</li>
+  <li>дойти до футурологии в 10:30 (провалено)</li>
+  <li>занять комп в первом ряду (выполнено)</li>
+  <li>сдать дневник (в процессе)</li>
+  <li>принять пищу (опционально)</li>
+</ul>
+</div>
   </body>
 </html>
