--- a/index.html
+++ b/index.html
@@ -9,43 +9,72 @@
 
 <header>
   <h1>ДНЕВНИК ПРОХОЖДЕНИЯ HSE ADS CHALLENGE</h1>
-  </header>
+  <ul>
+    <li>имя: ибатуллина даяна</li>
+    <li>рейтинг: &#9733; &#9733; &#9733; &#9733; &#9733;</li>
+  </ul>
+  
+  <div class="photo">
+  </div>
+
+</header>
 
     <nav>
       <ul>
-        <li>проекты</li>
-        <li>календарь</li>
-        <li>галерея</li>
-        <li>плейлист</li>
+        <li><a href="">проекты</a></li>
+        <li><a href="">галерея</a></li>
+        <li><a href="">плейлист</a></li>
       </ul>
   </nav>
-<section>
+<div class="menu">
   <ul>
-    <li>неделя #1</li>
-    <li>неделя #2</li>
-    <li>неделя #3</li>
-    <li>неделя #4</li>
-    <li>неделя #5</li>
-    <li>неделя #6</li>
-    <li>неделя #7</li>
-    <li>неделя #8</li>
+    <li><a href="">неделя #1</a></li>
+    <li><a href="">неделя #2</a></li>
+    <li><a href="">неделя #3</a></li>
+    <li><a href="">неделя #4</a></li>
+    <li><a href="">неделя #5</a></li>
+    <li><a href="">неделя #6</a></li>
+    <li><a href="">неделя #7</a></li>
+    <li><a href="">неделя #8</a></li>
   </ul>
-</section>
+</div>
 
-  <h2 class="week1">
-  <div class="week1"></div>
+<div class="description">
+<p>это дневник о том, как я проходила челлендж первого модуля учебы в Школе Дизайна</p>
+</div>
+
+  <h2>
   НЕДЕЛЯ ПЕРВАЯ
 </h2>
 
+<section>
 <div class="week1">
-<ul>
-  <li>пройти пост охраны</li>
-  <li>найти ключ от 559 (невозможно выполнить задание)</li>
+<ul>задания:
+  <li>познакомиться с группой (выполнено)</li>
+  <li>пройти пост охраны без порпуска (успешно)</li>
+  <li>взять ключ от 559 (невозможно выполнить задание)</li>
   <li>дойти до футурологии в 10:30 (провалено)</li>
   <li>занять комп в первом ряду (выполнено)</li>
-  <li>сдать дневник (в процессе)</li>
+  <li>сдать дневник (выполнено)<li>
+  <li>принять пищу (опционально)</li>
+</ul>
+<div class="meeting">
+</div>
+</div>
+</section>
+
+<section>
+<div class="week2">
+<ul>задания:
+  <li>познакомиться с группой (выполнено)</li>
+  <li>пройти пост охраны без порпуска (успешно)</li>
+  <li>взять ключ от 559 (невозможно выполнить задание)</li>
+  <li>дойти до футурологии в 10:30 (провалено)</li>
+  <li>занять комп в первом ряду (выполнено)</li>
+  <li>сдать дневник (выполнено)<li>
   <li>принять пищу (опционально)</li>
 </ul>
 </div>
+</section>
   </body>
 </html>
