--- a/index.html
+++ b/index.html
@@ -11,31 +11,28 @@
   <h1>ДНЕВНИК ПРОХОЖДЕНИЯ HSE ADS CHALLENGE</h1>
   <ul>
     <li>имя: ибатуллина даяна</li>
-    <li>рейтинг: &#9733; &#9733; &#9733; &#9733; &#9733;</li>
+    <li>статус: &#9733; &#9733; &#9733; &#9733; &#9733;</li>
   </ul>
-  
-  <div class="photo">
-  </div>
+
+<p><a name="top"></a></p>
+
+<div class="photo"></div>
 
 </header>
 
-    <nav>
-      <ul>
-        <li><a href="">проекты</a></li>
-        <li><a href="">галерея</a></li>
-        <li><a href="">плейлист</a></li>
-      </ul>
-  </nav>
+<nav>
+  <ul>
+    <li><a href="">проекты</a></li>
+    <li><a href="">галерея</a></li>
+    <li><a href="https://itunes.apple.com/ru/playlist/hse-ads-challenge-1/pl.u-gxblkXxF5883Zov">плейлист</a></li>
+  </ul>
+</nav>
+
 <div class="menu">
   <ul>
-    <li><a href="">неделя #1</a></li>
-    <li><a href="">неделя #2</a></li>
-    <li><a href="">неделя #3</a></li>
-    <li><a href="">неделя #4</a></li>
-    <li><a href="">неделя #5</a></li>
-    <li><a href="">неделя #6</a></li>
-    <li><a href="">неделя #7</a></li>
-    <li><a href="">неделя #8</a></li>
+    <li><a href="#september">сентябрь</a></li>
+    <li><a href="#october">октябрь</a></li>
+    <li><a href="#bottom">to be continued</a></li>
   </ul>
 </div>
 
@@ -43,38 +40,45 @@
 <p>это дневник о том, как я проходила челлендж первого модуля учебы в Школе Дизайна</p>
 </div>
 
-  <h2>
-  НЕДЕЛЯ ПЕРВАЯ
+<h2 class="mission"><div class="mission"></div>
+СЕНТЯБРЬ
 </h2>
+<p><a name="september"></a></p>
+  <p>миссии:</p>
+  <p></p>
+  <p>познакомиться с группой <span>(выполнено)</span></p>
+  <p>пройти пост охраны без порпуска <span>(успешно, вас не заподозрили)</span></p>
+  <p>забрать пропуск на Шаболовке <span>(провалено, возвращайтесь позже)</span></p>
+  <p>взять ключ от 559 <span>(невозможно выполнить задание)</span></p>
+  <p>забрать пропуск на Шаболовке <span>(провалено, возвращайтесь позже)</span></p>
+  <p>прийти на футурологию в 10:30 <span>(провалено, вы насторожили преподавателя)</span></p>
+  <p>занять комп в первом ряду <span>(выполнено)</span></p>
+  <p>принять пищу <span>(пропущено, плюс финансы, минус здоровье)</span></p>
+  <p>забрать пропуск на Шаболовке <span>(успешно)</span></p>
 
-<section>
-<div class="week1">
-<ul>задания:
-  <li>познакомиться с группой (выполнено)</li>
-  <li>пройти пост охраны без порпуска (успешно)</li>
-  <li>взять ключ от 559 (невозможно выполнить задание)</li>
-  <li>дойти до футурологии в 10:30 (провалено)</li>
-  <li>занять комп в первом ряду (выполнено)</li>
-  <li>сдать дневник (выполнено)<li>
-  <li>принять пищу (опционально)</li>
-</ul>
-<div class="meeting">
-</div>
-</div>
-</section>
+  <p></p>
+  <p>&#9733;дополнительные задания:</p>
+  <p>сгонять в Питер на выходные (плюс коммуникация, минус финансы) </p>
+  <p>сделать домашку в поезде (успешно)</p>
+  <p>посетить баттл-рэп ивент (минус финансы, минус здоровье)</p>
 
-<section>
-<div class="week2">
-<ul>задания:
-  <li>познакомиться с группой (выполнено)</li>
-  <li>пройти пост охраны без порпуска (успешно)</li>
-  <li>взять ключ от 559 (невозможно выполнить задание)</li>
-  <li>дойти до футурологии в 10:30 (провалено)</li>
-  <li>занять комп в первом ряду (выполнено)</li>
-  <li>сдать дневник (выполнено)<li>
-  <li>принять пищу (опционально)</li>
-</ul>
+<div class="level">
+  <p>ВЫ ПЕРЕШЛИ НА СЛЕДУЮЩИЙ УРОВЕНЬ</p>
 </div>
-</section>
+
+  <h2>
+  ОКТЯБРЬ
+  </h2>
+  <p><a name="october"></a></p>
+  <p>задания:</p>
+  <p>познакомиться с группой <span>(выполнено)</span></p>
+  <p>пройти пост охраны без порпуска <span>(успешно)</span></p>
+  <p>взять ключ от 559 <span>(невозможно выполнить задание)</span></p>
+  <p>дойти до футурологии в 10:30 <span>(провалено)</span></p>
+  <p>занять комп в первом ряду <span>(выполнено)</span></p>
+  <p>сдать дневник <span>(выполнено)</span></p>
+  <p>сдать дневник <span>(выполнено)</span></p>
+
+  <p><a href="#top">к началу челленджа</a></p>
   </body>
 </html>
