--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@
     <li>статус: &#9733; &#9733; &#9733; &#9733; &#9733;</li>
   </ul>
 
-<p><a name="top"></a></p>
-
 <div class="photo"></div>
 
 </header>
 
 <nav>
   <ul>
-    <li><a href="">проекты</a></li>
-    <li><a href="">галерея</a></li>
+    <li><a href="file:///C:/Users/Diana/Documents/GitHub/DIARY/index.html">челлендж</a></li>
+    <li><a href="file:///C:/Users/Diana/Documents/GitHub/DIARY/projects.html">проекты</a></li>
+    <li><a href="file:///C:/Users/Diana/Documents/GitHub/DIARY/gallery.html">галерея</a></li>
     <li><a href="https://itunes.apple.com/ru/playlist/hse-ads-challenge-1/pl.u-gxblkXxF5883Zov">плейлист</a></li>
   </ul>
 </nav>
@@ -32,10 +31,10 @@
   <ul>
     <li><a href="#september">сентябрь</a></li>
     <li><a href="#october">октябрь</a></li>
-    <li><a href="#bottom">to be continued</a></li>
   </ul>
 </div>
 
+<p><a name="top"></a></p>
 <div class="description">
 <p>это дневник о том, как я проходила челлендж первого модуля учебы в Школе Дизайна</p>
 </div>
@@ -53,6 +52,7 @@
   <p>забрать пропуск на Шаболовке <span>(провалено, возвращайтесь позже)</span></p>
   <p>прийти на футурологию в 10:30 <span>(провалено, вы насторожили преподавателя)</span></p>
   <p>занять комп в первом ряду <span>(выполнено)</span></p>
+  <p>посетить день вышки <span>(успешно)</span></p>
   <p>принять пищу <span>(пропущено, плюс финансы, минус здоровье)</span></p>
   <p>забрать пропуск на Шаболовке <span>(успешно)</span></p>
 
@@ -70,15 +70,31 @@
   ОКТЯБРЬ
   </h2>
   <p><a name="october"></a></p>
-  <p>задания:</p>
-  <p>познакомиться с группой <span>(выполнено)</span></p>
-  <p>пройти пост охраны без порпуска <span>(успешно)</span></p>
-  <p>взять ключ от 559 <span>(невозможно выполнить задание)</span></p>
-  <p>дойти до футурологии в 10:30 <span>(провалено)</span></p>
-  <p>занять комп в первом ряду <span>(выполнено)</span></p>
-  <p>сдать дневник <span>(выполнено)</span></p>
-  <p>сдать дневник <span>(выполнено)</span></p>
+  <p>миссии:</p>
+  <p></p>
+  <p>найти первоначальные варианты логотипов <span>(провалено, рекомендовано искать еще)</span></p>
+  <p>освоить программу figma <span>(успешно, плюс навык)</span></p>
+  <p>сдать тест по истории искусств <span>(успешно, вы не вызвали подозрений преподавателя)</span></p>
+  <p>выспаться <span>(провалено, плюс проект, минус здоровье)</span></p>
+  <p>утвердить окончательный вариант логотипов <span>(провалено, рекомендовано вернуться к первым вариантам)</span></p>
+  <p>освоить программу indesign (успешно, плюс навык)</p>
+  <p>утвердить окончательный вариант логотипов <span>(успешно, плюс опыт)</span></p>
+  <p>сдать просмотр по креативному проектирорванию<span> (выполнено, необходимо обратиться к психологу)</span></p>
+  <p>сдать дневник <span>(в процессе выполнения)</span></p>
 
-  <p><a href="#top">к началу челленджа</a></p>
+  <p></p>
+  <p>&#9733;дополнительные задания:</p>
+  <p>принять маму в гостях (плюс коммуникация, плюс финансы) </p>
+  <p>сделать ноготочки (плюс внешность, минус финансы)</p>
+
+  <div class="level">
+    <p>ПЕРЕХОД НА СЛЕДУЮЩИЙ УРОВЕНЬ ВРЕМЕННО ЗАКРЫТ</p>
+  </div>
+
+<div class="begin">
+<p><a href="#top">к началу челленджа</a></p>
+</div>
+
+
   </body>
 </html>
