--- a/gallery.html
+++ b/gallery.html
@@ -31,6 +31,7 @@
 
 
 <div class="meeting"></div>
+<a name="meeting"></a>
 <div class="group"></div>
 <div class="cmd"></div>
 <div class="stproof"></div>
