--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <p><a name="september"></a></p>
   <p>миссии:</p>
   <p></p>
-  <p>познакомиться с группой <span>(выполнено)</span></p>
+  <p><a href="file:///C:/Users/Diana/Documents/GitHub/DIARY/gallery.html#meeting">познакомиться с группой</a> <span>(выполнено)</span></p>
   <p>пройти пост охраны без порпуска <span>(успешно, вас не заподозрили)</span></p>
   <p>забрать пропуск на Шаболовке <span>(провалено, возвращайтесь позже)</span></p>
   <p>взять ключ от 559 <span>(невозможно выполнить задание)</span></p>
