--- a/gallery.html
+++ b/gallery.html
@@ -28,16 +28,22 @@
   </ul>
 </nav>
 
-
-
+<p></p>
+<h2>ТРЕТИЙ ОТРЯД</h2>
 <div class="meeting"></div>
 <a name="meeting"></a>
 <div class="group"></div>
+<h2>SAINT-PETERSBURG/CMD</h2>
 <div class="cmd"></div>
-<div class="stproof"></div>
+<div class="stproof"></div><a name="stproof"></a>
 <div class="stpchan"></div>
-<div class="hseday"></div>
+<h2>КАРЬЕРА САМА СЕБЯ НЕ ПОСТРОИТ</h2>
+<div class="hseday"></div><a name="hseday"></a>
 <div class="hsedayarm"></div>
+<h2>HSE/NO DEATH</h2>
 <div class="shab"></div>
+<a name="shab"></a>
 <div class="shabsuc"></div>
+<a name="shabsuc"></a>
 <div class="nodeath"></div>
+<a name="nodeath"></a>
