--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <nav>
   <ul>
     <li><a href="file:///C:/Users/Diana/Documents/GitHub/DIARY/index.html">челлендж</a></li>
-    <li><a href="file:///C:/Users/Diana/Documents/GitHub/DIARY/projects.html">проекты</a></li>
+    <li><a href="http://portfolio.hse.ru/User/10411">проекты</a></li>
     <li><a href="file:///C:/Users/Diana/Documents/GitHub/DIARY/gallery.html">галерея</a></li>
     <li><a href="https://itunes.apple.com/ru/playlist/hse-ads-challenge-1/pl.u-gxblkXxF5883Zov">плейлист</a></li>
   </ul>
@@ -34,12 +34,21 @@
   </ul>
 </div>
 
+
+<div class="challenge">
+<p>вы поступили в Высшую Школу Экономики, принять вызов?</p>
+</div>
+
+<div class="chall"></div>
+
 <p><a name="top"></a></p>
 <div class="description">
 <p>это дневник о том, как я проходила челлендж первого модуля учебы в Школе Дизайна</p>
 </div>
 
-<h2 class="mission"><div class="mission"></div>
+<h2 class="mission">
+  <div class="mission">
+  </div>
 СЕНТЯБРЬ
 </h2>
 <p><a name="september"></a></p>
@@ -47,18 +56,18 @@
   <p></p>
   <p><a href="file:///C:/Users/Diana/Documents/GitHub/DIARY/gallery.html#meeting">познакомиться с группой</a> <span>(выполнено)</span></p>
   <p>пройти пост охраны без порпуска <span>(успешно, вас не заподозрили)</span></p>
-  <p>забрать пропуск на Шаболовке <span>(провалено, возвращайтесь позже)</span></p>
+  <p><a href="file:///C:/Users/Diana/Documents/GitHub/DIARY/gallery.html#shab">забрать пропуск на Шаболовке </a><span>(провалено, возвращайтесь позже)</span></p>
   <p>взять ключ от 559 <span>(невозможно выполнить задание)</span></p>
   <p>забрать пропуск на Шаболовке <span>(провалено, возвращайтесь позже)</span></p>
   <p>прийти на футурологию в 10:30 <span>(провалено, вы насторожили преподавателя)</span></p>
   <p>занять комп в первом ряду <span>(выполнено)</span></p>
-  <p>посетить день вышки <span>(успешно)</span></p>
+  <p><a href="file:///C:/Users/Diana/Documents/GitHub/DIARY/gallery.html#hseday">посетить день вышки</a> <span>(успешно)</span></p>
   <p>принять пищу <span>(пропущено, плюс финансы, минус здоровье)</span></p>
-  <p>забрать пропуск на Шаболовке <span>(успешно)</span></p>
+  <p><a href="file:///C:/Users/Diana/Documents/GitHub/DIARY/gallery.html#shabsuc">забрать пропуск на Шаболовке </a><span>(успешно)</span></p>
 
   <p></p>
   <p>&#9733;дополнительные задания:</p>
-  <p>сгонять в Питер на выходные (плюс коммуникация, минус финансы) </p>
+  <p><a href="file:///C:/Users/Diana/Documents/GitHub/DIARY/gallery.html#stproof">сгонять в Питер на выходные</a> (плюс коммуникация, минус финансы) </p>
   <p>сделать домашку в поезде (успешно)</p>
   <p>посетить баттл-рэп ивент (минус финансы, минус здоровье)</p>
 
@@ -79,7 +88,7 @@
   <p>утвердить окончательный вариант логотипов <span>(провалено, рекомендовано вернуться к первым вариантам)</span></p>
   <p>освоить программу indesign (успешно, плюс навык)</p>
   <p>утвердить окончательный вариант логотипов <span>(успешно, плюс опыт)</span></p>
-  <p>сдать просмотр по креативному проектирорванию<span> (выполнено, необходимо обратиться к психологу)</span></p>
+  <p><a href="file:///C:/Users/Diana/Documents/GitHub/DIARY/gallery.html#nodeath">сдать просмотр по креативному проектирорванию</a><span> (выполнено, необходимо обратиться к психологу)</span></p>
   <p>сдать дневник <span>(в процессе выполнения)</span></p>
 
   <p></p>
@@ -88,12 +97,17 @@
   <p>сделать ноготочки (плюс внешность, минус финансы)</p>
 
   <div class="level">
-    <p>ПЕРЕХОД НА СЛЕДУЮЩИЙ УРОВЕНЬ ВРЕМЕННО ЗАКРЫТ</p>
+    <p>ПЕРЕХОД НА СЛЕДУЮЩИЙ УРОВЕНЬ ВРЕМЕННО НЕДОСТУПЕН</p>
   </div>
 
 <div class="begin">
 <p><a href="#top">к началу челленджа</a></p>
 </div>
+
+<footer>
+  <section>HSE ADS CHALLENGE</section>
+  <p>&copy; 2018</p>
+</footer>
 
 
   </body>
